--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -51,8 +51,7 @@ visit each set of factors prior to submitting your report.</p>
                         :min => 0, :max => 6000, 
                         :data => {:highlight => true }, :class => "slider ui-hidden-accessible",
                   			:factor => factor.name,
-                  			:oldValue => (6000 / @members.length ),
-                        :value => (6000/ @members.length) %>
+                  			:oldValue => (6000 / @members.length ) %>
                       <br>
                       <% end %><br>
                       <% index += 1 %>
