--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*
- *= require jquery.mobile
- *= require colab-theme
+ *= require colab
+ *= require jquery.mobile.icons.min
  */
