--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,7 @@
     <%= f.association :age_range %>
     <%= f.country_select :country %>
     <%= f.time_zone_select :timezone %>
+    <%= f.association :theme %>
   </div>
 
   <div class="form-actions">
