--- a/app/assets/stylesheets/colab.css
+++ b/app/assets/stylesheets/colab.css
@@ -212,7 +212,7 @@ html .ui-alt-icon .ui-radio-off:after {
 }
 /* Loader */
 .ui-icon-loading {
-	background: url("ajax-loader.gif");
+	/* background: image-url("ajax-loader.gif"); */
 	background-size: 2.875em 2.875em;
 }
 /* Swatches */
