Cosmetic fix to the footer

--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-    <div data-role="footer" data-position="fixed" data-fullscreen="true" data-theme="<%= @current_user.nil? ? "a" : @current_user.theme.code %>">
+    <div data-role="footer" data-position="fixed" data-theme="<%= @current_user.nil? ? "a" : @current_user.theme.code %>">
       <div class="ui-grid-a">
         <div class="ui-block-a">
           <div data-role="controlgroup" data-type="horizontal" data-mini="true">
