--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,12 @@
   <%= f.error_notification %>
   <%= f.input :welcomed, as: :hidden, input_html: { value: true } %>
 
-  <div class="form-inputs">
+  <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
+  <div class="form-inputs ui-corner-all custom-corners">
+    <div class="ui-bar ui-bar-<%= theme_code %>">
+      <h3>Edit Your Profile</h3>
+    </div>
+    <div class="ui-body ui-body-<%= theme_code %>">
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :first_name, required: true, autofocus: true %>
     <%= f.input :last_name, required: true, autofocus: true %>
@@ -12,10 +17,13 @@
     <%= f.input :password_confirmation, required: true %>
 
     <%= f.association :gender %>
-    <%= f.association :age_range %>
-    <%= f.country_select :country %>
-    <%= f.time_zone_select :timezone %>
-    <%= f.association :theme %>
+    <%= f.association :age_range, label: "How old are you?" %>
+    <%= f.input :country, as: :country, label: "Where are you from?", prompt: "Select a country",
+            priority: ["United States", "Korea, Republic of" ] %>
+    <%= f.input :timezone, as: :time_zone, label: "What time zone are you in?", prompt: "Select a timezone",
+      priority: /US|Seo/ %>
+    <%= f.association :theme, prompt: "Please choose a UI theme", label: "What UI theme would you like to use?" %>
+  </div>
   </div>
 
   <div class="form-actions">
