Correcting email address

--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -31,7 +31,7 @@
             <%= link_to "Demo", demo_start_path,
                   :data => { :icon => "action", :role => "button" } %>
             <% end %>
-            <%= mail_to "support@peerAssess.info", "Support",
+            <%= mail_to "support@CoLab.onlin", "Support",
                   :subject => "SAPA Support Request",
                   :data => { :icon => "mail", :role => "button" } %>
             <%= link_to "About", "https://www.PeerAssess.info",
