--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,9 +21,8 @@
 
     <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
-    <!--%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true % -->
-    <%= f.association :gender %>
-    <%= f.association :age_range, label: "How old are you?" %>
+    <%= f.association :gender, prompt: "Select a gender" %>
+    <%= f.association :age_range, label: "How old are you?", prompt: "Select an age range" %>
     <%= f.input :country, as: :country, label: "Where are you from?", prompt: "Select a country",
             priority: ["United States", "Korea, Republic of" ] %>
     <%= f.input :timezone, as: :time_zone, label: "What time zone are you in?", prompt: "Select a timezone",
