--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,8 +16,8 @@
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
 
-    <%= f.association :gender %>
-    <%= f.association :age_range, label: "How old are you?" %>
+    <%= f.association :gender, prompt: "Select a gender" %>
+    <%= f.association :age_range, label: "How old are you?", prompt: "Select an age range" %>
     <%= f.input :country, as: :country, label: "Where are you from?", prompt: "Select a country",
             priority: ["United States", "Korea, Republic of" ] %>
     <%= f.input :timezone, as: :time_zone, label: "What time zone are you in?", prompt: "Select a timezone",
