Updated the instructions

--- a/app/views/experiences/reaction.html.erb
+++ b/app/views/experiences/reaction.html.erb
@@ -41,7 +41,7 @@
 
         <div>
           <div class="ui-bar ui-bar-a" >
-            <h3>How could I improve upon it? (optional) </h3>
+            <h3>How could I improve upon the narrative? (optional) </h3>
           </div>
           <%= f.input :improvements, as: :text, size: "24x6", label: "Your suggestions:" %>
         </div>
