Looks like I missed an instructions file

--- a/app/views/shared/_instructions.html.erb
+++ b/app/views/shared/_instructions.html.erb
@@ -1,6 +1,6 @@
 <p>
 
-In this study, you will read a weekly journal written by a student in a
+In this experience, you will read a weekly journal written by a student in a
 semester-long collaborative group project. The entries document the fourteen
 (14) weeks of the project. The student is fictional, so his or her privacy is
 immaterial. As you read each narrative, you will decide <em>which
@@ -17,5 +17,6 @@ of the group's behavior, using the same list of behaviors.
 
 <p>
 Please <em>do not use your browser's <strong>back</strong> button</em> during
-the study.
+the experience. If you need to stop for any reason, you can pick up where you
+left off whenever you return.
 </p>
