Fixed some worflow and UI issues with the admin function.

--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -4,8 +4,8 @@
   <div class="form-inputs">
     <%= f.association :course %>
     <%= f.input :name %>
-    <%= f.check_box :active %>
-    <%= f.input :start_date, as: :datetime %>
+    <%= f.input :active %>
+    <%= f.input :start_date %>
     <%= f.input :end_date, as: :datetime %>
   </div>
 
