--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -19,4 +19,4 @@
 
 
 <%= link_to 'Edit', edit_experience_path(@experience) %> |
-<%= link_to 'Back', experiences_path %>
+<%= link_to 'Back to course', @experience.course %>
