--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @project.name %>
+  <%= @project.name %> (<%= @project.active ? "Active" : "Inactive" %>)
 </p>
 
 <p>
@@ -60,4 +60,4 @@
 
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back to course', @project.course %>
