--- a/app/views/layouts/experiences.html.erb
+++ b/app/views/layouts/experiences.html.erb
@@ -6,38 +6,31 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "installments_manifest" %>
   <%= csrf_meta_tags %>
+  <% working = !( @diagnosis.nil? && @reaction.nil? ) %>
 </head>
 <body>
   <div data-role="page" data-theme="<%= @current_user.nil? ? "a" : @current_user.theme.code %>">
     <div data-role="header" data-position="fixed" style="overflow:hidden;" >
       <h1>CoLab</h1>
-      <% working = !( @diagnosis.nil? && @reaction.nil? ) %>
-      <% if working %>
-        <div data-role="navbar">
-        <ul>
-          <li>
             <% if working %>
+              <a data-role="button" href="#instructions" id="instr_btn" data-icon="info"
+                class="ui-btn-right ui-mini ui-btn-inline" >Instructions</a>
+            <% end %>
+    </div>
+      <% if working %>
+            <% if working %>
+              </br>
                 <div id="progressbar" style="width: 50%; margin: auto">
               <% if !@diagnosis.nil? && !@diagnosis.week.nil? %>
                   <div style="width: <%= @diagnosis.week.percent_complete %>%">
+                  <center><%= @diagnosis.week.percent_complete %>% Complete</center>
               <% else %>
                   <div style="width: 98%">
               <% end %>
                   </div>
                 </div>
             <% end %>
-          </li>
-          <li>&nbsp;</li>
-          <li>
-            <% if working %>
-              <a href="#instructions" id="instr_btn" 
-                class="ui-btn ui-mini ui-icon-info ui-btn-inline ui-btn-icon-right" >Instructions</a>
-            <% end %>
-          </li>
-        </ul>
-        </div>
       <% end %>
-    </div>
 
     <div data-role="content">
       <% if flash[:error] -%>
