--- a/app/views/experiences/reaction.html.erb
+++ b/app/views/experiences/reaction.html.erb
@@ -30,7 +30,7 @@
         <div id="other_name_panel">
         <p class='error'><%= @reaction.errors[ :other_name ].first %></p>
       <% else %>
-        <div style="display: none" id="other_name_panel">
+        <div id="other_name_panel">
       <% end %>
           <%= f.input :other_name, label: "What behavior did you see?" %><br>
         </div>
@@ -41,11 +41,11 @@
 
         <div>
           <div class="ui-bar ui-bar-a" >
-            <h3>How could I improve upon the narrative? (optional) </h3>
+            <h3>How could I improve upon the narrative? </h3>
           </div>
           <%= f.input :improvements, as: :text, size: "24x6", label: "Your suggestions:" %>
         </div>
-        <div id="final_submit_panel" style="display: none">
+        <div id="final_submit_panel" >
           <%= f.submit "Submit" %>
         </div>
   
