Extending adming tabs to editing.

--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -54,7 +54,7 @@
         <td>Completed</td>
         <td><%= reaction.narrative.scenario.behavior.name %></td>
         <td><%= reaction.narrative.member %></td>
-        <td><%= reaction.narrative.scenario.behavior.name %></td>
+        <td><%= reaction.behavior.name %></td>
         <td>
           <% if reaction.improvements.blank? %>
           N/A
