--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,18 +1,35 @@
 <%= simple_form_for @project do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.association :course %>
-    <%= f.input :name %>
-    <%= f.input :active %>
-    <%= f.input :start_date, as: :date_time_local %>
-    <%= f.input :end_date, as: :date_time_local %>
-    <%= f.select :start_dow, Date::DAYNAMES.each_with_index.to_a, prompt: true  %>
-    <%= f.select :end_dow, Date::DAYNAMES.each_with_index.to_a, prompt: true  %>
-    <%= f.association :factor_pack %>
-    <%= f.association :style %>
-    <%= f.input :description, as: :text %>
+<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
+
+<div data-role="tabs" id="tabs">
+  <div data-role="navbar">
+    <ul>
+      <li><a href="#details" data-ajax="false">Details</a></li>
+      <li><a href="#groups" data-ajax="false">Group Assignments</a></li>
+      <li><a href="#summary" data-ajax="false">Response Summary</a></li>
+      <li><a href="#responses" data-ajax="false">Response Data</a></li>
+    </ul>
   </div>
+  <div id="details" class="ui-body-<%= theme_code %> ui-content">
+    <h2>Project Details</h2>
+    <div class="form-inputs">
+      <%= f.association :course %>
+      <%= f.input :name %>
+      <%= f.input :active %>
+      <%= f.input :start_date, as: :date_time_local %>
+      <%= f.input :end_date, as: :date_time_local %>
+      <%= f.select :start_dow, Date::DAYNAMES.each_with_index.to_a, prompt: true  %>
+      <%= f.select :end_dow, Date::DAYNAMES.each_with_index.to_a, prompt: true  %>
+      <%= f.association :factor_pack %>
+      <%= f.association :style %>
+      <%= f.input :description, as: :text %>
+    </div>
+  </div>
+  <div id="details" class="ui-body-<%= theme_code %> ui-content">
+  </div>
+  <div id="groups" class="ui-body-<%= theme_code %> ui-content">
   <h2>Group memberships</h2>
   <% if @project.groups.any? || @project.enrolled_user_rosters.any? %>
   <table>
@@ -31,8 +48,16 @@
         <% end %>
       </tr>
       <% end %>
-  <table>
+  </table>
   <% end %>
+  </div>
+  <div id="summary" class="ui-body-<%= theme_code %> ui-content">
+    <h2>Response Summary</h2>
+  </div>
+  <div id="responses" class="ui-body-<%= theme_code %> ui-content">
+    <h2>Responses</h2>
+  </div>
+</div>
     
 
   <div class="form-actions">
