--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,6 +62,8 @@
                   <em>
                   <% if reaction.behavior.present? %>
                     Completed
+                  <% elsif reaction.next_week.nil? %>
+                    97%
                   <% else %>
                     <%= reaction.next_week.percent_complete.to_s + "%" %>
                   <% end %>
