--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div id="profile" class="ui-body-<%= theme_code %> ui-content">
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <h2>Edit your profile, <%= @current_user.first_name %></h2>
+        <h2>Your account information</h2>
           <%= f.error_notification %>
           <%= f.input :welcomed, as: :hidden, input_html: { value: true } %>
 
@@ -21,6 +21,15 @@
               <%= f.input :first_name, required: true, autofocus: true %>
               <%= f.input :last_name, required: true, autofocus: true %>
               <%= f.input :email, required: true, autofocus: true %>
+              <%= link_to "Want to change your password?", new_password_path(resource_name) %><br />
+            </div>
+
+
+              <div class="ui-corner-all custom-corners">
+                <div class="ui-bar ui-bar-<%=theme_code %>">
+                  <h3>Tell us about yourself<%= ", " + @current_user.first_name unless @current_user.first_name.nil? %></h3>
+                </div>
+                <div class="ui-body ui-body-<%=theme_code %>">
               <%= f.association :school, label: "Which school are you currently at?", prompt: "Select a School" %>
 
               <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -34,6 +43,7 @@
               <%= f.input :timezone, as: :time_zone, label: "What time zone are you in?", prompt: "Select a timezone",
                     priority: /US|Seo/ %>
               <%= f.association :theme, prompt: "Please choose a UI theme", label: "What UI theme would you like to use?" %>
+            </div>
             </div>
           </div>
   <div class="form-actions">
