--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
 
           <div class="form-inputs ui-corner-all custom-corners">
             <div class="ui-bar ui-bar-<%= theme_code %>">
-              <h3>Edit Your Profile</h3>
+              <h3>Edit your profile</h3>
             </div>
             <div class="ui-body ui-body-<%= theme_code %>">
               <%= f.input :email, required: true, autofocus: true %>
